--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "dependencies": {
     "babel-plugin-tailwind": "^0.1.10",
-    "gatsby": "next",
+    "gatsby": "^2.0.0-beta.36",
     "gatsby-plugin-feed": "next",
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sharp": "next",
-    "gatsby-plugin-twitter": "^1.0.20",
+    "gatsby-plugin-sitemap": "^1.2.25",
     "gatsby-plugin-typography": "next",
     "gatsby-remark-copy-linked-files": "next",
     "gatsby-remark-external-links": "0.0.4",
@@ -23,7 +23,7 @@
     "gatsby-remark-prismjs": "next",
     "gatsby-remark-responsive-iframe": "next",
     "gatsby-remark-smartypants": "next",
-    "gatsby-source-filesystem": "next",
+    "gatsby-source-filesystem": "^2.0.1-beta.5",
     "gatsby-transformer-remark": "next",
     "gatsby-transformer-sharp": "next",
     "lodash": "^4.17.5",
