--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-robots-txt": "^1.1.0",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-sitemap": "^1.2.25",
     "gatsby-plugin-typography": "next",
