--- a/package.json
+++ b/package.json
@@ -8,32 +8,32 @@
   },
   "dependencies": {
     "babel-plugin-tailwind": "^0.1.10",
-    "gatsby": "^2.0.0-beta.36",
-    "gatsby-plugin-feed": "next",
-    "gatsby-plugin-google-analytics": "next",
+    "gatsby": "^2.0.0-beta.59",
+    "gatsby-plugin-feed": "^2.0.0-beta.4",
+    "gatsby-plugin-google-analytics": "^2.0.0-beta.3",
     "gatsby-plugin-google-fonts": "0.0.4",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-robots-txt": "^1.1.0",
-    "gatsby-plugin-sharp": "next",
+    "gatsby-plugin-offline": "^2.0.0-beta.5",
+    "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
+    "gatsby-plugin-robots-txt": "^1.2.0",
+    "gatsby-plugin-sharp": "^2.0.0-beta.7",
     "gatsby-plugin-sitemap": "^1.2.25",
-    "gatsby-plugin-typography": "next",
-    "gatsby-remark-copy-linked-files": "next",
+    "gatsby-plugin-typography": "^2.2.0-beta.3",
+    "gatsby-remark-copy-linked-files": "^2.0.0-beta.3",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "next",
-    "gatsby-remark-prismjs": "next",
-    "gatsby-remark-responsive-iframe": "next",
-    "gatsby-remark-smartypants": "next",
-    "gatsby-source-filesystem": "^2.0.1-beta.5",
-    "gatsby-transformer-remark": "next",
-    "gatsby-transformer-sharp": "next",
+    "gatsby-remark-images": "^2.0.1-beta.9",
+    "gatsby-remark-prismjs": "^3.0.0-beta.4",
+    "gatsby-remark-responsive-iframe": "^2.0.0-beta.3",
+    "gatsby-remark-smartypants": "^2.0.0-beta.3",
+    "gatsby-source-filesystem": "^2.0.1-beta.10",
+    "gatsby-transformer-remark": "^2.1.1-beta.4",
+    "gatsby-transformer-sharp": "^2.1.1-beta.6",
     "lodash": "^4.17.5",
     "postcss": "^6.0.22",
     "postcss-cli": "^5.0.0",
     "prismjs": "^1.15.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-emotion": "^9.1.3",
+    "react-emotion": "^9.2.6",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
     "tailwindcss": "^0.5.3",
