--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
-    "gatsby-plugin-remove-trailing-slashes": "^1.0.9",
+    "gatsby-plugin-remove-trailing-slashes": "^2.0.0-beta.3",
     "gh-pages": "^1.1.0",
     "prettier": "^1.12.0"
   },
