--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-plugin-tailwind": "^0.1.10",
+    "disqus-react": "^1.0.5",
     "gatsby": "^2.0.0-beta.59",
     "gatsby-plugin-feed": "^2.0.0-beta.4",
     "gatsby-plugin-google-analytics": "^2.0.0-beta.3",
