--- a/package.json
+++ b/package.json
@@ -8,32 +8,32 @@
   },
   "dependencies": {
     "babel-plugin-tailwind": "^0.1.10",
-    "gatsby": "^2.0.0-beta.59",
-    "gatsby-plugin-feed": "^2.0.0-beta.4",
-    "gatsby-plugin-google-analytics": "^2.0.0-beta.3",
+    "gatsby": "^2.0.0-rc.25",
+    "gatsby-plugin-feed": "^2.0.0-rc.2",
+    "gatsby-plugin-google-analytics": "^2.0.0-rc.2",
     "gatsby-plugin-google-fonts": "0.0.4",
-    "gatsby-plugin-offline": "^2.0.0-beta.5",
-    "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
-    "gatsby-plugin-robots-txt": "^1.2.0",
-    "gatsby-plugin-sharp": "^2.0.0-beta.7",
+    "gatsby-plugin-offline": "^2.0.0-rc.8",
+    "gatsby-plugin-react-helmet": "^3.0.0-rc.1",
+    "gatsby-plugin-robots-txt": "^1.3.0",
+    "gatsby-plugin-sharp": "^2.0.0-rc.7",
     "gatsby-plugin-sitemap": "^1.2.25",
-    "gatsby-plugin-typography": "^2.2.0-beta.3",
-    "gatsby-remark-copy-linked-files": "^2.0.0-beta.3",
+    "gatsby-plugin-typography": "^2.2.0-rc.3",
+    "gatsby-remark-copy-linked-files": "^2.0.0-rc.5",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^2.0.1-beta.9",
-    "gatsby-remark-prismjs": "^3.0.0-beta.4",
-    "gatsby-remark-responsive-iframe": "^2.0.0-beta.3",
-    "gatsby-remark-smartypants": "^2.0.0-beta.3",
-    "gatsby-source-filesystem": "^2.0.1-beta.10",
-    "gatsby-transformer-remark": "^2.1.1-beta.4",
-    "gatsby-transformer-sharp": "^2.1.1-beta.6",
-    "lodash": "^4.17.5",
+    "gatsby-remark-images": "^2.0.1-rc.5",
+    "gatsby-remark-prismjs": "^3.0.0-rc.2",
+    "gatsby-remark-responsive-iframe": "^2.0.0-rc.5",
+    "gatsby-remark-smartypants": "^2.0.0-rc.1",
+    "gatsby-source-filesystem": "^2.0.1-rc.6",
+    "gatsby-transformer-remark": "^2.1.1-rc.5",
+    "gatsby-transformer-sharp": "^2.1.1-rc.3",
+    "lodash": "^4.17.11",
     "postcss": "^6.0.22",
     "postcss-cli": "^5.0.0",
     "prismjs": "^1.15.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-emotion": "^9.2.6",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
+    "react-emotion": "^9.2.9",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
     "tailwindcss": "^0.5.3",
@@ -43,9 +43,9 @@
   },
   "devDependencies": {
     "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.11.1",
     "gh-pages": "^1.1.0",
-    "prettier": "^1.12.0"
+    "prettier": "^1.14.2"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
