--- a/package.json
+++ b/package.json
@@ -9,44 +9,45 @@
   "dependencies": {
     "babel-plugin-tailwind": "^0.1.10",
     "disqus-react": "^1.0.5",
-    "gatsby": "^2.0.0-rc.25",
-    "gatsby-plugin-feed": "^2.0.0-rc.2",
-    "gatsby-plugin-google-analytics": "^2.0.0-rc.2",
+    "gatsby": "^2.0.91",
+    "gatsby-plugin-feed": "^2.0.11",
+    "gatsby-plugin-google-analytics": "^2.0.9",
     "gatsby-plugin-google-fonts": "0.0.4",
-    "gatsby-plugin-offline": "^2.0.0-rc.8",
-    "gatsby-plugin-react-helmet": "^3.0.0-rc.1",
+    "gatsby-plugin-offline": "^2.0.21",
+    "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "^2.0.0-rc.7",
+    "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-sitemap": "^1.2.25",
-    "gatsby-plugin-typography": "^2.2.0-rc.3",
-    "gatsby-remark-copy-linked-files": "^2.0.0-rc.5",
+    "gatsby-plugin-typography": "^2.2.5",
+    "gatsby-remark-autolink-headers": "^2.0.12",
+    "gatsby-remark-copy-linked-files": "^2.0.8",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^2.0.1-rc.5",
-    "gatsby-remark-prismjs": "^3.0.0-rc.2",
-    "gatsby-remark-responsive-iframe": "^2.0.0-rc.5",
-    "gatsby-remark-smartypants": "^2.0.0-rc.1",
-    "gatsby-source-filesystem": "^2.0.1-rc.6",
-    "gatsby-transformer-remark": "^2.1.1-rc.5",
-    "gatsby-transformer-sharp": "^2.1.1-rc.3",
+    "gatsby-remark-images": "^2.0.6",
+    "gatsby-remark-prismjs": "^3.2.0",
+    "gatsby-remark-responsive-iframe": "^2.0.8",
+    "gatsby-remark-smartypants": "^2.0.7",
+    "gatsby-source-filesystem": "^2.0.16",
+    "gatsby-transformer-remark": "^2.2.0",
+    "gatsby-transformer-sharp": "^2.1.10",
     "lodash": "^4.17.11",
     "postcss": "^6.0.22",
     "postcss-cli": "^5.0.0",
     "prismjs": "^1.15.0",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-emotion": "^9.2.9",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-emotion": "^9.2.12",
     "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.13",
+    "react-typography": "^0.16.18",
     "tailwindcss": "^0.5.3",
-    "typography": "^0.16.17",
-    "typography-theme-bootstrap": "^0.16.7",
+    "typography": "^0.16.18",
+    "typography-theme-bootstrap": "^0.16.18",
     "typography-theme-fairy-gates": "^0.15.11"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react": "^7.12.3",
     "gh-pages": "^1.1.0",
-    "prettier": "^1.14.2"
+    "prettier": "^1.15.3"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
